src/objects/ScenarioItemConfigJoinTable__c.object
<CustomObject>
    <description>Join Table to manage Sposors and Provinces Min Max for each Scenario Items</description>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Province</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScenarioItem__c</fullName>
        <label>Scenario Item</label>
        <referenceTo>ScenarioItem__c</referenceTo>
        <relationshipLabel>Scenario Items Config Join Table</relationshipLabel>
        <relationshipName>ScenarioItemsConfigJoinTable</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <label>Scenario Item Config Join Table</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scenario Items Config Join Table</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>